# wechat_db_parser

./: .gitignore  README.md  pyproject.toml
docs/: database_format.md  design.md  parser_details.md
scripts/: filter_text_messages.py  performance_improvement_plan.py
src/wechat_db_parser/: cli.py  contacts.py  datasource.py  exporter.py  model.py  parser.py
src/wechat_msg_parser/: __init__.py
